# dictionary

./: .gitignore  pyproject.toml  run_me.py
alembic/: env.py
alembic/versions/: 2025_03_21_2229-8dcaee74a30a_create_dictionary_topic_words_tables.py  2025_03_21_2237-27cc4c88807f_added_relationships.py  2025_03_21_2314-4943afbb1a8d_fix_model.py  2025_03_22_0004-362f7077de54_fix_model.py  2025_03_22_1301-f243fe71f02a_added_limits_len_name_field_and_add_new_.py  2025_03_22_1815-cac08a858355_added_limits_len_name_field_and_add_new_.py  2025_03_22_1915-8385c0677382_added_progress_in_topic_table.py  2025_04_04_2017-501ba7c18181_added_tg_users_and_word_trys_tables.py  2025_04_04_2023-90a92862202d_add_unique_constraint.py  2025_04_09_1841-ffc67a29f81e_add_tg_user_topic_progress_table.py  2025_04_09_1846-ec09d6bd3864_add_unique_constraint_in_tg_user_topic_.py  2025_04_09_2127-040b3ad755a8_add_topic_battles_table.py  2025_04_10_1721-2ede4b0efbdf_add_chat_ids_to_tg_users.py  2025_04_10_2005-9a59773fbb96_change_type_chat_ids_in_tg_users.py  2025_05_30_1618-2831d7ac46da_set_nullebel_true_dictionary_in_topic.py
src/: alembic.ini  run_me.py
src/alembic/: env.py
src/core/: db_connections.py  logger.py  middleware.py  settings.py
src/handlers/: battle.py  dectionary.py  dictionary.py  start.py  topic.py  words.py
src/kbs/: dictionary.py  other.py  pagination.py  topic.py  words.py
src/models/: __init__.py  base.py  dictionary.py  tg_users.py
src/repository/: base.py  dictionary.py  tg_user.py
src/schemas/: dictionary.py  tg_user.py
src/states/: dictionary.py
(+3 files in other folders)
